chore: create variables for all colours

--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -1,37 +1,69 @@
 ## COLORSCHEME: gruvbox dark (medium)
+
+set-option -g @bg colour235      #282828
+set-option -g @bg0 colour235     #282828
+set-option -g @bg0_h colour234   #1d2021
+set-option -g @bg0_s colour236   #32302f
+set-option -g @bg1 colour237     #3c3836
+set-option -g @bg2 colour239     #504945
+set-option -g @bg3 colour241     #665c54
+set-option -g @bg4 colour243     #7c6f64
+set-option -g @fg colour223      #ebdbb2
+set-option -g @fg0 colour229     #fbf1c7
+set-option -g @fg1 colour223     #ebdbb2
+set-option -g @fg2 colour250     #d5c4a1
+set-option -g @fg3 colour248     #bdae93
+set-option -g @fg4 colour246     #a89984
+set-option -g @red1 colour124    #cc241d
+set-option -g @red2 colour167    #fb4934
+set-option -g @green1 colour106  #98971a
+set-option -g @green2 colour142  #b8bb26
+set-option -g @yellow1 colour172 #d79921
+set-option -g @yellow2 colour214 #fabd2f
+set-option -g @blue1 colour66    #458588
+set-option -g @blue2 colour109   #83a598
+set-option -g @purple1 colour132 #b16286
+set-option -g @purple2 colour175 #d3869b
+set-option -g @aqua1 colour72    #689d6a
+set-option -g @aqua2 colour108   #8ec07c
+set-option -g @orange1 colour166 #d65d0e
+set-option -g @orange2 colour208 #fe8019
+set-option -g @gray1 colour246   #a89984
+set-option -g @gray2 colour245   #928374
+
 set-option -g status "on"
 
 # default statusbar color
-set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+set-option -g status-style "bg=#{@bg1},fg=#{@fg1}"
 
 # default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+set-window-option -g window-status-style "bg=#{@yellow2},fg=#{@fg1}"
 
 # default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+set-window-option -g window-status-activity-style "bg=#{@bg1},fg=#{@fg3}"
 
 # active window title colors
-set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+set-window-option -g window-status-current-style "bg=#{@red2},fg=#{@bg1}"
 
 # pane border
-set-option -g pane-active-border-style fg=colour250 #fg2
-set-option -g pane-border-style fg=colour237 #bg1
+set-option -g pane-active-border-style "fg=#{@fg2}"
+set-option -g pane-border-style "fg=#{@bg1}"
 
 # message infos
-set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+set-option -g message-style "bg=#{@bg2},fg=#{@fg1}"
 
 # writing commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+set-option -g message-command-style "bg=#{@bg2},fg=#{@fg1}"
 
 # pane number display
-set-option -g display-panes-active-colour colour250 #fg2
-set-option -g display-panes-colour colour237 #bg1
+set-option -gF display-panes-active-colour "#{@fg2}"
+set-option -gF display-panes-colour "#{@bg1}"
 
 # clock
-set-window-option -g clock-mode-colour colour109 #blue
+set-window-option -gF clock-mode-colour "#{@blue2}"
 
 # bell
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+set-window-option -g window-status-bell-style "bg=#{@red2},fg=#{@bg}"
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 set-option -g status-justify "left"
@@ -41,10 +73,10 @@ set-option -g status-right-style none
 set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
 
-set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
-set-option -g status-right "#[bg=colour237,fg=colour239,nobold,nounderscore,noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] #h "
+set-option -g status-left "#[bg=#{@bg3},fg=#{@fg3}] #S #[bg=#{@bg1},fg=#{@bg3},nobold,noitalics,nounderscore]"
+set-option -g status-right "#[bg=#{@bg1},fg=#{@bg2},nobold,nounderscore,noitalics]#[bg=#{@bg2},fg=#{@fg4}] %Y-%m-%d  %H:%M #[bg=#{@bg2},fg=#{@fg3},nobold,noitalics,nounderscore]#[bg=#{@fg3},fg=#{@bg1}] #h "
 
-set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #{?window_zoomed_flag,#[bold]Z,#I} #[bg=colour214,fg=colour239,bold] #W #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
-set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #{?window_last_flag,#[bold],#[bg=colour239#,fg=colour223]} #W #[bg=colour237,fg=colour239,noitalics]"
+set-window-option -g window-status-current-format "#[bg=#{@yellow2},fg=#{@bg1},nobold,noitalics,nounderscore]#[bg=#{@yellow2},fg=#{@bg2}] #{?window_zoomed_flag,#[bold]Z,#I} #[bg=#{@yellow2},fg=#{@bg2},bold] #W #[bg=#{@bg1},fg=#{@yellow2},nobold,noitalics,nounderscore]"
+set-window-option -g window-status-format "#[bg=#{@bg2},fg=#{@bg1},noitalics]#[bg=#{@bg2},fg=#{@fg1}] #I #{?window_last_flag,#[bold],#[bg=#{@bg2}#,fg=#{@fg1}]} #W #[bg=#{@bg1},fg=#{@bg2},noitalics]"
 
 # vim: set ft=tmux tw=0 nowrap:
