--- a/tmux-gruvbox-light.conf
+++ b/tmux-gruvbox-light.conf
@@ -5,39 +5,74 @@
 # the spirit of gruvbox light theme with limited numbers of
 # 256 color palette.
 
+set-option -g @non1 colour252    #d0d0d0 Grey82
+set-option -g @non2 colour255    #eeeeee Grey93
+set-option -g @non3 colour215    #ffaf5f SandyBrown
+set-option -g @non4 colour249    #b2b2b2 Grey70
+set-option -g @bg colour229      #fbf1c7
+set-option -g @bg0 colour229     #fbf1c7
+set-option -g @bg0_h colour230   #f9f5d7
+set-option -g @bg0_s colour228   #f2e5bc
+set-option -g @bg1 colour223     #ebdbb2
+set-option -g @bg2 colour250     #d5c4a1
+set-option -g @bg3 colour248     #bdae93
+set-option -g @bg4 colour246     #a89984
+set-option -g @fg colour237      #3c3836
+set-option -g @fg0 colour235     #282828
+set-option -g @fg1 colour237     #3c3836
+set-option -g @fg2 colour239     #504945
+set-option -g @fg3 colour241     #665c54
+set-option -g @fg4 colour243     #7c6f64
+set-option -g @red1 colour124    #cc241d
+set-option -g @red2 colour88     #9d0006
+set-option -g @green1 colour106  #98971a
+set-option -g @green2 colour100  #79740e
+set-option -g @yellow1 colour172 #d79921
+set-option -g @yellow2 colour136 #b57614
+set-option -g @blue1 colour66    #458588
+set-option -g @blue2 colour24    #076678
+set-option -g @purple1 colour132 #b16286
+set-option -g @purple2 colour96  #8f3f71
+set-option -g @aqua1 colour72    #689d6a
+set-option -g @aqua2 colour66    #427b58
+set-option -g @orange1 colour166 #d65d0e
+set-option -g @orange2 colour130 #af3a03
+set-option -g @gray1 colour243   #7c6f64
+set-option -g @gray2 colour244   #928374
+
 set-option -g status "on"
 
 # default statusbar colors
-set-option -g status-style bg=colour252,fg=colour239 # bg=notInGruvboxPallete, #fg=fg1
+set-option -g status-style "bg=#{@non1},fg=#{@fg1}"
 
 # default window title colors
-set-window-option -g window-status-style bg=colour66,fg=colour229 # bg=aqua, fg=bg5
+set-window-option -g window-status-style "bg=#{@aqua2},fg=#{@bg}"
 
 # default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour241 # bg=bg1, fg=notInGruvboxPallete
+set-window-option -g window-status-activity-style "bg=#{@fg1},fg=#{@fg3}"
 
 # active window title colors
-set-window-option -g window-status-current-style bg=default,fg=colour237 # bg=default, fg=bg1
+set-window-option -g window-status-current-style "bg=default,fg=#{@fg1}"
 
 # pane border
-set-option -g pane-active-border-style fg=colour241 # fg=notInGruvboxPallete
-set-option -g pane-border-style fg=colour252 # bg1=notInGruvboxPallete
+set-option -g pane-active-border-style "fg=#{@fg3}"
+set-option -g pane-border-style "fg=#{@non1}"
 
 # message infos (visible while writing command)
-set-option -g message-style bg=colour252,fg=colour241 # bg=notInGruvboxPallete, fg=notInGruvboxPallete
+set-option -g message-style "bg=#{@non1},fg=#{@fg3}"
 
 # writing commands inactive
-set-option -g message-command-style bg=colour124,fg=colour241 # bg=notInGruvboxPallete, fg=notInGruvboxPallete
+set-option -g message-command-style "bg=#{@red1},fg=#{@fg3}"
 
 # pane number display
-set-option -g display-panes-active-colour colour241 # notInGruvboxPallete
-set-option -g display-panes-colour colour248 # notInGruvboxPallete
+set-option -gF display-panes-active-colour "#{@fg3}"
+set-option -gF display-panes-colour "#{@bg3}"
 
 # clock
-set-window-option -g clock-mode-colour colour172 # orange
+set-window-option -gF clock-mode-colour "#{@yellow1}"
 
 # bell
-set-window-option -g window-status-bell-style bg=colour124,fg=colour229 # bg=red, fg=bg
+set-window-option -g window-status-bell-style "bg=#{@red1},fg=#{@bg}"
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 set-option -g status-justify "left"
@@ -47,10 +82,10 @@ set-option -g status-right-style none
 set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
 
-set-option -g status-left "#[bg=colour243,fg=colour255] #S #[bg=colour252,fg=colour243,nobold,noitalics,nounderscore]"
-set-option -g status-right "#[bg=colour252,fg=colour243,nobold,nounderscore,noitalics]#[bg=colour243,fg=colour255] %Y-%m-%d  %H:%M #[bg=colour243,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour237,fg=colour255] #h "
+set-option -g status-left "#[bg=#{@fg4},fg=#{@non2}] #S #[bg=#{@non1},fg=#{@fg4},nobold,noitalics,nounderscore]"
+set-option -g status-right "#[bg=#{@non1},fg=#{@fg4},nobold,nounderscore,noitalics]#[bg=#{@fg4},fg=#{@non2}] %Y-%m-%d  %H:%M #[bg=#{@fg4},fg=#{@fg1},nobold,noitalics,nounderscore]#[bg=#{@fg1},fg=#{@non2}] #h "
 
-set-window-option -g window-status-current-format "#[bg=colour215,fg=colour252,nobold,noitalics,nounderscore]#[bg=colour215,fg=colour239] #{?window_zoomed_flag,#[bold]Z,#I} #[bg=colour215,fg=colour239,bold] #W #[bg=colour252,fg=colour215,nobold,noitalics,nounderscore]"
-set-window-option -g window-status-format "#[bg=colour249,fg=colour252,noitalics]#[bg=colour249,fg=colour241] #I #{?window_last_flag,#[bold],#[bg=colour249#,fg=colour241]} #W #[bg=colour252,fg=colour249,noitalics]"
+set-window-option -g window-status-current-format "#[bg=#{@non3},fg=#{@non1},nobold,noitalics,nounderscore]#[bg=#{@non3},fg=#{@fg2}] #{?window_zoomed_flag,#[bold]Z,#I} #[bg=#{@non3},fg=#{@fg2},bold] #W #[bg=#{@non1},fg=#{@non3},nobold,noitalics,nounderscore]"
+set-window-option -g window-status-format "#[bg=#{@non4},fg=#{@non1},noitalics]#[bg=#{@non4},fg=#{@fg3}] #I #{?window_last_flag,#[bold],#[bg=#{@non4}#,fg=#{@fg3}]} #W #[bg=#{@non1},fg=#{@non4},noitalics]"
 
 # vim: set ft=tmux tw=0 nowrap:
